--- a/Coupons/Promotion.Coupon/Views/News/NewsVoucherView.cshtml
+++ b/Coupons/Promotion.Coupon/Views/News/NewsVoucherView.cshtml
@@ -78,7 +78,7 @@
                             <table border="0" cellpadding="0" cellspacing="0">
                                 <tr>
                                     <td width="190" height="32"><img src="http://back2.tempsite.ws/Intimus/img-8.jpg" style="display: block;"></td>
-                                    <td width="217" bgcolor="#ffde16" style="font-size: 16px; font-weight: bold; color: #02171e; text-transform: uppercase; text-align: center; font-family:Impact, Charcoal, sans-serif; letter-spacing: 4px;"><div style="width: 217px">Voucher: {VOUCHER}</div></td>
+                                    <td width="217" bgcolor="#ffde16" style="font-size: 14px; font-weight: bold; color: #02171e; text-transform: uppercase; text-align: center; font-family:Impact, Charcoal, sans-serif; letter-spacing: 4px;"><div style="width: 217px">Voucher: {VOUCHER}</div></td>
                                     <td width="193" height="32"><img src="http://back2.tempsite.ws/Intimus/img-10.jpg" style="display: block;"></td>
                                 </tr>
                             </table>
@@ -134,7 +134,7 @@
                         <table border="0" cellpadding="0" cellspacing="0">
                             <tr>
                                 <td width="298" height="33"><img src="http://back2.tempsite.ws/Intimus/img-21.jpg" style="display: block;"></td>
-                                <td width="302" height="33"><a href="http://www.intimus.com.br/gympass/"><img src="http://back2.tempsite.ws/Intimus/img-22.jpg" style="display: block;"></a></td>
+                                <td width="302" height="33"><a href="http://www.gympass.com/produtos/1187/adicionar"><img src="http://back2.tempsite.ws/Intimus/img-22.jpg" style="display: block;"></a></td>
                             </tr>
                         </table>
                     </tr>
@@ -174,7 +174,7 @@
                         <table border="0" cellpadding="0" cellspacing="0">
                             <tr>
                                 <td height="28" width="209"><img src="http://back2.tempsite.ws/Intimus/img-29.jpg" style="display: block;"></td>
-                                <td width="186" height="28"><a href="http://www.intimus.com.br/gympass/"><img src="http://back2.tempsite.ws/Intimus/img-30.jpg" style="display: block;"></a></td>
+                                <td width="186" height="28"><a href="http://www.gympass.com/produtos/1187/adicionar"><img src="http://back2.tempsite.ws/Intimus/img-30.jpg" style="display: block;"></a></td>
                                 <td height="28" width="205"><img src="http://back2.tempsite.ws/Intimus/img-31.jpg" style="display: block;"></td>
                             </tr>
                         </table>
