--- a/Coupons/Promotion.Coupon/Areas/Admin/Views/Receipt/VPowerWinners.cshtml
+++ b/Coupons/Promotion.Coupon/Areas/Admin/Views/Receipt/VPowerWinners.cshtml
@@ -15,29 +15,54 @@
                             <th>Nome</th>
                             <th>E-mail</th>                          
                             <th>Data do Cadastro</th>
-                            <th></th>                           
-                            <th></th>
+                            <th></th> 
                         </tr>
                     </thead>
                     <tbody>
                         @foreach (var receipt in receipts)
                         {
-                            <tr data-idReceipt="@receipt.idReceipt">
+                            <tr data-idreceipt="@receipt.idReceipt" id="TR_@receipt.idReceipt">
                                 <td><a href="/admin/person/@receipt.idPerson">@receipt.Person.name</a></td>
-                                <td><a href="/admin/person/@receipt.idPerson">@receipt.Person.email</a></td>  
+                                <td><a href="/admin/person/@receipt.idPerson">@receipt.Person.email</a></td>
                                 <td>@receipt.dtCreation.ToString("dd/MM/yyyy HH:mm") </td>
-                                                           
+
                                 <td>
-                                    <a class="btn-xs btn-default" target="_blank" href="/receipt/file?id=@receipt.idReceipt.ToString().PadLeft(8, '0').Base64Encode()"><i class="icon-file3" style="margin-right: 5px;"></i> Ver cupom</a>
-                                </td>                               
-                                <td>
-                                    @if (showButtons) { 
-                                    <a class="btn-xs btn-success bt-aprovar"><i class="icon-thumbs-up2" style="margin-right: 5px;"></i> Aprovar</a>
-                                    <a class="btn-xs btn-danger bt-reprovar"><i class="icon-thumbs-down2" style="margin-right: 5px;"></i> Reprovar</a>
+                                    @if (showButtons)
+                                    {
+                                        <a class="btn-xs btn-default" href="javascript:void(0)" onclick="ShowModal(@receipt.idReceipt);"><i class="icon-file3" style="margin-right: 5px;"></i> Ver cupom</a>
                                     }
-                                </td>
+                                    else
+                                    {
+                                        <a class="btn-xs btn-default" target="_blank" href="/receipt/file?id=@receipt.idReceipt.ToString().PadLeft(8, '0').Base64Encode()"><i class="icon-file3" style="margin-right: 5px;"></i> Ver cupom</a>
+                                    }
+                                </td>                               
                             </tr>
-                        }
+                                    //Modal apenas para Pendentes
+                                    if (showButtons)
+                                    {
+                                <div id="default_modal_@receipt.idReceipt" class="modal fade in" tabindex="-1" role="dialog" aria-hidden="false" style="display: none;">
+                                    <div class="modal-dialog" style="width: 100%; height: 100%">
+                                        <div class="modal-content" data-idreceipt="@receipt.idReceipt">
+                                            <div class="modal-header">
+                                                <button type="button" class="close" data-dismiss="modal" aria-hidden="true" onclick="$('#default_modal_@receipt.idReceipt').hide();">×</button>
+                                                <h4 class="modal-title">Cupom</h4>
+                                            </div>
+
+                                            <div class="modal-body with-padding" id="DivImg_@receipt.idReceipt'">
+                                                <img src="data:image/jpeg;base64,@receipt.imgBase64" style="width: 100%; height: 100%" />
+                                            </div>
+                                            <div class="modal-footer">
+                                                <a class="btn-xs btn-default" target="_blank" href="/receipt/file?id=@receipt.idReceipt.ToString().PadLeft(8, '0').Base64Encode()"><i class="icon-file3" style="margin-right: 5px;"></i> Imagem Original</a>
+                                                <a class="btn-xs btn-success bt-aprovar"><i class="icon-thumbs-up2" style="margin-right: 5px;"></i> Aprovar</a>
+                                                <a class="btn-xs btn-danger bt-reprovar"><i class="icon-thumbs-down2" style="margin-right: 5px;"></i> Reprovar</a>
+                                                <a class="btn-xs btn-primary" onclick="$('#default_modal_@receipt.idReceipt').hide();">Fechar</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <input type="hidden" value="@receipt.imgBase64" id="HiddenIMG_@receipt.idReceipt">
+                                </div>
+                            }
+                        }                        
                     </tbody>
                 </table>
             </div>
@@ -72,24 +97,27 @@
 
 @section scripts {
 <script>
+
     $(function () {
         $('.bt-aprovar').on('click', function () {
             var parent = $(this).parent().parent();
+            $('#TR_' + parent.attr('data-idReceipt')).remove();
             $.get('/admin/receipt/' + parent.attr('data-idReceipt') + '/set-validated', {
                 isValidated: true
             }, function () {
                 $(parent).fadeOut('fast', function(parent) {
-                    $(parent).remove();
+                    $('.modal').hide();
                 });
             });
         });
         $('.bt-reprovar').on('click', function () {
             var parent = $(this).parent().parent();
+            $('#TR_' + parent.attr('data-idReceipt')).remove();
             $.get('/admin/receipt/' + parent.attr('data-idReceipt') + '/set-validated', {
                 isValidated: false
             }, function () {
                 $(parent).fadeOut('fast', function (parent) {
-                    $(parent).remove();
+                    $('.modal').hide();
                 });
             });
         });
@@ -106,5 +134,10 @@
             "language": dtLanguage
         });
     });
+    
+    function ShowModal(idReceipt) {       
+        $('#default_modal_' + idReceipt).show();
+    }
+                       
 </script>
 }
